--- a/client/index.html
+++ b/client/index.html
@@ -9,11 +9,18 @@
       content="A web application to manage and share code snippets."
     />
     <!-- Page Title -->
-    <!-- Page Title -->
     <title>Code Snippet Manager</title>
 
-    <!-- Stylesheets -->
-    <link rel="stylesheet" href="styles.css" />
+    <!-- Bootstrap CSS -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <!-- Bootstrap Icons -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css"
+      rel="stylesheet"
+    />
 
     <!-- Prism.js for Syntax Highlighting -->
     <link
@@ -21,9 +28,12 @@
       rel="stylesheet"
     />
 
-    <!-- Fonts (Required by styles.css) -->
+    <!-- Custom Styles -->
+    <link rel="stylesheet" href="bootstrap-styles.css" />
+
+    <!-- Fonts -->
     <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
     <link
@@ -35,7 +45,9 @@
     <!-- Routing View for AngularJS -->
     <div ng-view></div>
 
-    <!-- Scripts (Loaded at the end of the body for better performance) -->
+    <!-- Bootstrap JavaScript Bundle -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
     <!-- AngularJS and Angular Route -->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular-route.min.js"></script>
