--- a/client/login.html
+++ b/client/login.html
@@ -1,47 +1,115 @@
-<div class="card" ng-controller="AuthController">
-  <h1>Login</h1>
-  <div ng-if="errorMessage" class="error-message">{{errorMessage}}</div>
-  <form id="loginForm" ng-submit="login()">
-    <label for="login-email">Email or Username</label>
-    <input
-      id="login-email"
-      ng-model="loginData.email"
-      placeholder="Email or Username"
-      required
-      ng-keydown="onEnter($event, 'login-password')"
-      ng-change="clearErrors()"
-      tabindex="1"
-    />
-    <div ng-if="errors.email" class="field-error">{{errors.email}}</div>
+<div
+  class="container-fluid min-vh-100 d-flex align-items-center justify-content-center"
+  ng-controller="AuthController"
+>
+  <div class="row w-100 justify-content-center">
+    <div class="col-12 col-md-6 col-lg-4">
+      <div class="card custom-card shadow-lg">
+        <div class="card-body p-5">
+          <div class="text-center mb-4">
+            <h1 class="header-title">
+              <i class="bi bi-code-slash me-2"></i>
+              Welcome Back
+            </h1>
+            <p class="text-muted">Sign in to your Code Snippet Manager</p>
+          </div>
 
-    <label for="login-password">Password</label>
-    <input
-      id="login-password"
-      type="password"
-      ng-model="loginData.password"
-      placeholder="Password"
-      required
-      ng-keydown="onEnter($event, null, login)"
-      ng-change="clearErrors()"
-      tabindex="2"
-    />
-    <div ng-if="errors.password" class="field-error">{{errors.password}}</div>
+          <!-- Error Message -->
+          <div
+            ng-if="errorMessage"
+            class="alert alert-custom-error d-flex align-items-center mb-4"
+            role="alert"
+          >
+            <i class="bi bi-exclamation-triangle-fill me-2"></i>
+            <div>{{errorMessage}}</div>
+          </div>
 
-    <button
-      id="login-button"
-      type="submit"
-      class="next-btn"
-      ng-click="login()"
-      aria-label="Login"
-      tabindex="3"
-    >
-      Next
-    </button>
-    <p>
-      New to CSM?
-      <a class="auth-link" ng-click="goToRegister()" tabindex="4"
-        >Create an account</a
-      >
-    </p>
-  </form>
+          <!-- Login Form -->
+          <form id="loginForm" ng-submit="login()" novalidate>
+            <!-- Email/Username Field -->
+            <div class="mb-4">
+              <label for="login-email" class="form-label">
+                <i class="bi bi-person-fill me-1"></i>
+                Email or Username
+              </label>
+              <input
+                id="login-email"
+                type="text"
+                class="form-control"
+                ng-class="{'is-invalid': errors.email}"
+                ng-model="loginData.email"
+                placeholder="Enter your email or username"
+                required
+                ng-keydown="onEnter($event, 'login-password')"
+                ng-change="clearErrors()"
+                tabindex="1"
+                autocomplete="username"
+              />
+              <div ng-if="errors.email" class="field-error">
+                <i class="bi bi-exclamation-circle me-1"></i>
+                {{errors.email}}
+              </div>
+            </div>
+
+            <!-- Password Field -->
+            <div class="mb-4">
+              <label for="login-password" class="form-label">
+                <i class="bi bi-lock-fill me-1"></i>
+                Password
+              </label>
+              <div class="input-group">
+                <input
+                  id="login-password"
+                  type="password"
+                  class="form-control"
+                  ng-class="{'is-invalid': errors.password}"
+                  ng-model="loginData.password"
+                  placeholder="Enter your password"
+                  required
+                  ng-keydown="onEnter($event, null, login)"
+                  ng-change="clearErrors()"
+                  tabindex="2"
+                  autocomplete="current-password"
+                />
+              </div>
+              <div ng-if="errors.password" class="field-error">
+                <i class="bi bi-exclamation-circle me-1"></i>
+                {{errors.password}}
+              </div>
+            </div>
+
+            <!-- Login Button -->
+            <div class="d-grid mb-4">
+              <button
+                id="login-button"
+                type="submit"
+                class="btn btn-gradient-primary btn-lg"
+                ng-click="login()"
+                tabindex="3"
+              >
+                <i class="bi bi-box-arrow-in-right me-2"></i>
+                Sign In
+              </button>
+            </div>
+
+            <!-- Register Link -->
+            <div class="text-center">
+              <p class="mb-0 text-muted">
+                New to CSM?
+                <a
+                  href="#"
+                  class="text-decoration-none fw-semibold"
+                  ng-click="goToRegister()"
+                  tabindex="4"
+                >
+                  Create an account
+                  <i class="bi bi-arrow-right ms-1"></i>
+                </a>
+              </p>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
