--- a/client/register.html
+++ b/client/register.html
@@ -1,56 +1,142 @@
-<div class="card" ng-controller="AuthController">
-  <h1>Register</h1>
-  <div ng-if="errorMessage" class="error-message">{{errorMessage}}</div>
-  <form id="registerForm" ng-submit="register()">
-    <label for="register-email">Email</label>
-    <input
-      id="register-email"
-      ng-model="registerData.email"
-      placeholder="Email"
-      required
-      ng-keydown="onEnter($event, 'register-password')"
-      ng-change="clearErrors()"
-      tabindex="1"
-    />
-    <div ng-if="errors.email" class="field-error">{{errors.email}}</div>
+<div
+  class="container-fluid min-vh-100 d-flex align-items-center justify-content-center"
+  ng-controller="AuthController"
+>
+  <div class="row w-100 justify-content-center">
+    <div class="col-12 col-md-6 col-lg-5">
+      <div class="card custom-card shadow-lg">
+        <div class="card-body p-5">
+          <div class="text-center mb-4">
+            <h1 class="header-title">
+              <i class="bi bi-person-plus-fill me-2"></i>
+              Create Account
+            </h1>
+            <p class="text-muted">Join the Code Snippet Manager community</p>
+          </div>
 
-    <label for="register-password">Password</label>
-    <input
-      id="register-password"
-      type="password"
-      ng-model="registerData.password"
-      placeholder="Password"
-      required
-      ng-keydown="onEnter($event, 'register-username')"
-      ng-change="clearErrors()"
-      tabindex="2"
-    />
-    <div ng-if="errors.password" class="field-error">{{errors.password}}</div>
+          <!-- Error Message -->
+          <div
+            ng-if="errorMessage"
+            class="alert alert-custom-error d-flex align-items-center mb-4"
+            role="alert"
+          >
+            <i class="bi bi-exclamation-triangle-fill me-2"></i>
+            <div>{{errorMessage}}</div>
+          </div>
 
-    <label for="register-username">Username</label>
-    <input
-      id="register-username"
-      ng-model="registerData.username"
-      placeholder="Username"
-      required
-      ng-keydown="onEnter($event, null, register)"
-      ng-change="clearErrors()"
-      tabindex="3"
-    />
-    <div ng-if="errors.username" class="field-error">{{errors.username}}</div>
+          <!-- Registration Form -->
+          <form id="registerForm" ng-submit="register()" novalidate>
+            <!-- Email Field -->
+            <div class="mb-4">
+              <label for="register-email" class="form-label">
+                <i class="bi bi-envelope-fill me-1"></i>
+                Email Address
+              </label>
+              <input
+                id="register-email"
+                type="email"
+                class="form-control"
+                ng-class="{'is-invalid': errors.email}"
+                ng-model="registerData.email"
+                placeholder="your.name@csm.com"
+                required
+                ng-keydown="onEnter($event, 'register-password')"
+                ng-change="clearErrors()"
+                tabindex="1"
+                autocomplete="email"
+              />
+              <div class="form-text">
+                <i class="bi bi-info-circle me-1"></i>
+                Must be a valid @csm.com email address
+              </div>
+              <div ng-if="errors.email" class="field-error">
+                <i class="bi bi-exclamation-circle me-1"></i>
+                {{errors.email}}
+              </div>
+            </div>
 
-    <button
-      id="register-button"
-      type="submit"
-      class="next-btn"
-      ng-click="register()"
-      tabindex="4"
-    >
-      Next
-    </button>
-    <p>
-      Already have an account?
-      <a href class="no-underline" ng-click="goToLogin()" tabindex="5">Login</a>
-    </p>
-  </form>
+            <!-- Password Field -->
+            <div class="mb-4">
+              <label for="register-password" class="form-label">
+                <i class="bi bi-lock-fill me-1"></i>
+                Password
+              </label>
+              <input
+                id="register-password"
+                type="password"
+                class="form-control"
+                ng-class="{'is-invalid': errors.password}"
+                ng-model="registerData.password"
+                placeholder="Create a secure password"
+                required
+                ng-keydown="onEnter($event, 'register-username')"
+                ng-change="clearErrors()"
+                tabindex="2"
+                autocomplete="new-password"
+              />
+              <div ng-if="errors.password" class="field-error">
+                <i class="bi bi-exclamation-circle me-1"></i>
+                {{errors.password}}
+              </div>
+            </div>
+
+            <!-- Username Field -->
+            <div class="mb-4">
+              <label for="register-username" class="form-label">
+                <i class="bi bi-person-badge-fill me-1"></i>
+                Username
+              </label>
+              <input
+                id="register-username"
+                type="text"
+                class="form-control"
+                ng-class="{'is-invalid': errors.username}"
+                ng-model="registerData.username"
+                placeholder="Choose a unique username"
+                required
+                ng-keydown="onEnter($event, null, register)"
+                ng-change="clearErrors()"
+                tabindex="3"
+                autocomplete="username"
+              />
+              <div ng-if="errors.username" class="field-error">
+                <i class="bi bi-exclamation-circle me-1"></i>
+                {{errors.username}}
+              </div>
+            </div>
+
+            <!-- Register Button -->
+            <div class="d-grid mb-4">
+              <button
+                id="register-button"
+                type="submit"
+                class="btn btn-gradient-primary btn-lg"
+                ng-click="register()"
+                tabindex="4"
+              >
+                <i class="bi bi-person-check-fill me-2"></i>
+                Create Account
+              </button>
+            </div>
+
+            <!-- Login Link -->
+            <div class="text-center">
+              <p class="mb-0 text-muted">
+                Already have an account?
+                <a
+                  href="#"
+                  class="text-decoration-none fw-semibold"
+                  ng-click="goToLogin()"
+                  tabindex="5"
+                >
+                  <i class="bi bi-arrow-left me-1"></i>
+                  Sign in instead
+                </a>
+              </p>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
