--- a/client/login.html
+++ b/client/login.html
@@ -97,7 +97,7 @@
               <p class="mb-0 text-muted">
                 New to CSM?
                 <a
-                  href="#"
+                  href="javascript:void(0)"
                   class="text-decoration-none fw-semibold"
                   ng-click="goToRegister()"
                   tabindex="4"
