--- a/client/register.html
+++ b/client/register.html
@@ -14,6 +14,16 @@
             <p class="text-muted">Join the Code Snippet Manager community</p>
           </div>
 
+          <!-- Success Message -->
+          <div
+            ng-if="successMessage"
+            class="alert alert-custom-success d-flex align-items-center mb-4"
+            role="alert"
+          >
+            <i class="bi bi-check-circle-fill me-2"></i>
+            <div>{{successMessage}}</div>
+          </div>
+
           <!-- Error Message -->
           <div
             ng-if="errorMessage"
@@ -74,6 +84,39 @@
                 tabindex="2"
                 autocomplete="new-password"
               />
+
+              <!-- Password Strength Indicator -->
+              <div ng-if="registerData.password" class="password-strength mt-2">
+                <div class="progress" style="height: 5px">
+                  <div
+                    class="progress-bar"
+                    ng-class="{
+                      'bg-danger': getPasswordStrength(registerData.password) === 'weak',
+                      'bg-warning': getPasswordStrength(registerData.password) === 'medium',
+                      'bg-success': getPasswordStrength(registerData.password) === 'strong'
+                    }"
+                    ng-style="{ width: getPasswordStrengthWidth(registerData.password) + '%' }"
+                  ></div>
+                </div>
+                <small class="text-muted">
+                  Password strength:
+                  <span
+                    ng-class="{
+                    'text-danger': getPasswordStrength(registerData.password) === 'weak',
+                    'text-warning': getPasswordStrength(registerData.password) === 'medium',
+                    'text-success': getPasswordStrength(registerData.password) === 'strong'
+                  }"
+                  >
+                    {{ getPasswordStrength(registerData.password) | uppercase }}
+                  </span>
+                </small>
+              </div>
+
+              <div class="form-text mt-2">
+                <i class="bi bi-info-circle me-1"></i>
+                Must be at least 6 characters with uppercase, lowercase, and
+                numbers
+              </div>
               <div ng-if="errors.password" class="field-error">
                 <i class="bi bi-exclamation-circle me-1"></i>
                 {{errors.password}}
@@ -99,6 +142,10 @@
                 tabindex="3"
                 autocomplete="username"
               />
+              <div class="form-text">
+                <i class="bi bi-info-circle me-1"></i>
+                At least 3 characters, letters, numbers, and underscores only
+              </div>
               <div ng-if="errors.username" class="field-error">
                 <i class="bi bi-exclamation-circle me-1"></i>
                 {{errors.username}}
@@ -124,7 +171,7 @@
               <p class="mb-0 text-muted">
                 Already have an account?
                 <a
-                  href="#"
+                  href="javascript:void(0)"
                   class="text-decoration-none fw-semibold"
                   ng-click="goToLogin()"
                   tabindex="5"
